--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="poster"></div>
 <script>
 function init() {
-    Tabletop.init( { key: 'https://docs.google.com/a/ncsu.edu/spreadsheets/d/1W1QpEbymlrm8zk3TUQdq3eTM3YbXPCDMcmKbvJLAGzU/pubhtml',
+    Tabletop.init( { key: 'https://docs.google.com/spreadsheets/d/1W1QpEbymlrm8zk3TUQdq3eTM3YbXPCDMcmKbvJLAGzU/pubhtml',
         callback: displayData,
         simpleSheet: true })
     }
