added console log

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 function init() {
     Tabletop.init( { key: 'https://docs.google.com/spreadsheets/d/1W1QpEbymlrm8zk3TUQdq3eTM3YbXPCDMcmKbvJLAGzU/pubhtml',
         callback: displayData,
+        console.log(data)
         simpleSheet: true })
     }
 
