--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <script>
 function init() {
     Tabletop.init( { key: 'https://docs.google.com/spreadsheets/d/1W1QpEbymlrm8zk3TUQdq3eTM3YbXPCDMcmKbvJLAGzU/pubhtml',
-        callback: displayData,
-        console.log(data)
+    callback: function(data, tabletop) {
+                   console.log(data)
+               },
+      //callback: displayData,
         simpleSheet: true })
     }
 
