--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ function init() {
 function displayData(data, tabletop) {
     $.each(data, function (index, value) {
         var contentType = value.ContentType;
-        console.log(contentType);
+        console.log(value.contenttype);
         var content = value.Content;
-        console.log(content);
+        console.log(value.content);
         var columnNumber = value.ColumnNumber;
         var backgroundColor = value.BackgroundColor;
         var color = value.Color;
