--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="javascript/tabletop.js"></script>
+<script src="javascript/handlebars-v4.0.5.js"></script>
 <style>
 
 </style>
