Eliminated unnecessary casting to textarea
I incorrectly believed it was necessary to unpack the text content into a new <textarea> element to unescape marks like the equals sign. This is not necessary, so I have eliminated the step.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@ function displayData(data, tabletop) {
         
         $('div.math').each(function() {
         	/* Automatically escaped when written into document; unescape for KaTeX */
-        	var string = $('<textarea>').html($(this).text()).text();
-        	var katex_render = katex.renderToString(string, {displayMode:true});
+        	var katex_render = katex.renderToString($(this).text(), {displayMode:true});
         	$(this).html(katex_render);
         });
         
