--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+  	TeX: {
+  		extensions: ["mhchem.js"]
+  	}
+  });
+</script>
 <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
